[gd_scene load_steps=2 format=3 uid="uid://dfvk5l83m2lid"]

[ext_resource type="Script" path="res://Scenes/level_success.gd" id="1_0ydm4"]

[node name="LevelSuccess" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ydm4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 136.0
offset_bottom = 101.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="SuccessMessage" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]Stage 1 Cleared![/center]"
fit_content = true

[node name="Next" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Next"

[node name="Restart" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
